--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,4 +33,5 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+publish = { id = "maven-publish", version.ref = "agp" }
 
